<resources>
    <string name="app_name">BeerTag</string>
    <string name="toolbar_title_beers_list">BEERS</string>
    <string name="title_activity_users_list">UsersListActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="deletion_question">Do you want to delete this beer?</string>
    <string name="deletion_answer_yes">Yes</string>
    <string name="deletion_answer_no">No</string>

    <string name="edit_text_hint_search_beers">Search beers by tag,style,country</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="filter_options">
        <item>All</item>
        <item>Sort by rating</item>
        <item>Sort by abv</item>
        <item>Sort by alphabet</item>
    </string-array>

    <string name="toolbar_title_my_users">USERS</string>

    <string name="rate">RATE</string>

    <string name="drink">DRINK</string>
    <string name="add_tag">ADD TAG</string>
    <string name="toolbar_title_add_new_beer">Add new beer</string>

    <string name="add_beer">ADD</string>
    <string name="enter_beer_title">Beer title</string>
    <string name="enter_beer_abv">ABV</string>
    <string name="enter_beer_style">Style</string>
    <string name="enter_beer_description">Description</string>
    <string name="enter_brewery">Brewery</string>
    <string name="enter_beer_country">Origin country</string>
    <string name="enter_beer_rating">Rating</string>
    <string name="enter_beer_tag">Tag</string>
    <string name="enter_image_url">Image url</string>

    <string name="toolbar_title_beer_details">Beer details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="top_three_beers">Top rated beers:</string>
</resources>
