<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_new_beer_tag_for_add"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/enter_beer_tag"/>

    <Button
        android:id="@+id/btn_answer_add"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_new_beer_tag_for_add"
        android:layout_marginBottom="@dimen/MediumMargin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/BigMargin"
        android:background="@color/md_black_1000"
        android:text="@string/add_tag"
        android:textColor="@color/md_green_A700" />

    <Button
        android:id="@+id/btn_answer_cancel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/et_new_beer_tag_for_add"
        android:layout_marginBottom="@dimen/MediumMargin"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/BigMargin"
        android:background="@color/md_black_1000"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/md_red_700" />

</RelativeLayout>